# krunner-keepassxc

./: .editorconfig  .gitignore  .pylintrc  Clipboard.py  KeepassPasswords.py  README.md  build-pex.sh  build-shiv.sh  keepass_cli.py  krunner-keepassxc.desktop  krunner-keepassxc.py  krunner-keepassxc.service  krunner.py  krunner_keepassxc_cli.py  krunner_keepassxc_start.py  pex_requirements.txt  poetry.toml  pyproject.toml
install/: krunner-keepassxc.desktop  krunner-keepassxc.service  krunner-keepassxc_autostart.desktop  krunner-keepassxc_novenv.service  krunner-keepassxc_venv.service
install/kdestore/: install.sh  krunner-keepassxc.desktop  krunner-keepassxc.service  krunner-keepassxc_autostart.desktop  uninstall.sh
krunner_keepassxc/: __main__.py  clipboard.py  dhcrypto.py  keepass.py  runner.py  types.py
tests/: dhcrypto_reference.py  test_krunner_keepassxc.py
