[tool.poetry]
name = "krunner-keepassxc"
version = "1.8.0"
description = ""
authors = ["naglfar <stefan@mtztech.info>"]

[tool.poetry.dependencies]
python = "^3.6,<3.11"
dbus-python = "^1.2"
cryptography = "^37.0"
setproctitle = "^1.2"
xdg = "^5.1"
pyotp = "^2.6"

[tool.poetry.dev-dependencies]
vext = "^0.7"
"vext.gi" = "^0.7"
pytest = "^7.0"
shiv = "^1.0"
radon = "^5.1"
taskipy = "^1.10"
mypy = "^0.950"
pylint = "^2.12"
rope = "^1.0"
bandit = "^1.7"

[tool.poetry.scripts]
runner = "krunner_keepassxc.__main__:runner"
cli = "krunner_keepassxc.__main__:main"

[tool.taskipy.tasks]
tests = "python -m unittest tests/test_*.py"
mypy = "mypy --ignore-missing-imports --check-untyped-defs krunner_keepassxc tests"
lint = "pylint krunner_keepassxc"
radon = "radon cc krunner_keepassxc"
shiv = """shiv \
		-p "/usr/bin/env python3" \
		-e krunner_keepassxc.__main__:main \
		--output-file dist/krunner-keepassxc.pyz \
		."""
store = """tar czf dist/krunner-keepassxc.tar.gz --xform s:^.*/:: install/kdestore/* dist/krunner-keepassxc.pyz"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

