[tool.poetry]
name = "krunner-keepassxc"
version = "1.9.0"
description = ""
authors = ["naglfar <stefan@mtztech.info>"]

[tool.poetry.dependencies]
python = "^3.8"
dbus-python = "^1.3.2"
cryptography = "^43.0.3"
setproctitle = "^1.3.3"
xdg = "^6.0.0"
pyotp = "^2.9.0"

[tool.poetry.scripts]
runner = "krunner_keepassxc.__main__:runner"
cli = "krunner_keepassxc.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
shiv = "^1.0.3"
radon = "^6.0.1"
mypy = "^1.3.0"
taskipy = "^1.11.0"
pylint = "^2.17.7"
rope = "^1.8.0"
bandit = "^1.7.5"

[tool.taskipy.tasks]
tests = "python -m unittest tests/test_*.py"
mypy = "mypy --ignore-missing-imports --check-untyped-defs krunner_keepassxc tests"
lint = "pylint krunner_keepassxc"
radon = "radon cc krunner_keepassxc"
shiv = """shiv \
		-p "/usr/bin/env python3" \
		-e krunner_keepassxc.__main__:main \
		--output-file dist/krunner-keepassxc.pyz \
		."""
store = """tar czf dist/krunner-keepassxc-store-1.9.0.tar.gz --xform s:^.*/:: install/kdestore/* dist/krunner-keepassxc.pyz"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

